MOZ_DIAGNOSTIC_ASSERT(hostEntry && hostEntry.Data() == aProcess) Crash in [@ mozilla::dom::BrowsingContextGroup::Subscribe]
Categories
(Core :: DOM: Navigation, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox79 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | fixed |
firefox82 | --- | fixed |
People
(Reporter: sg, Assigned: nika)
References
Details
(Keywords: crash, regression, Whiteboard: [fission-])
Crash Data
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-945c9a60-a777-4086-96a5-74eea0200818.
Top 10 frames of crashing thread:
0 XUL mozilla::dom::BrowsingContextGroup::Subscribe docshell/base/BrowsingContextGroup.cpp:129
1 XUL mozilla::dom::BrowsingContext::CreateFromIPC docshell/base/BrowsingContext.cpp:382
2 XUL mozilla::dom::ContentParent::RecvCreateBrowsingContext dom/ipc/ContentParent.cpp:6411
3 XUL mozilla::dom::PContentParent::OnMessageReceived ipc/ipdl/PContentParent.cpp:13102
4 XUL mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2074
5 XUL mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1953
6 XUL mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:512
7 XUL mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal xpcom/threads/nsThreadUtils.h:577
8 XUL nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1242
9 XUL NS_ProcessPendingEvents xpcom/threads/nsThreadUtils.cpp:461
Crash reason in MOZ_DIAGNOSTIC_ASSERT(hostEntry && hostEntry.Data() == aProcess) (Cannot subscribe a non-host process)
from https://searchfox.org/mozilla-central/rev/23dd7c485a6525bb3a974abeaafaf34bfb43d76b/docshell/base/BrowsingContextGroup.cpp#129
Started with Nightly build id 20200804215246. No changes in BrowsingContext/BrowsingContextGroup itself at that time, but the diagnostic assertion was added a few days before in Bug 1652144. Nika, could you give that a look, given you added the assertion?
Comment 1•4 years ago
|
||
Looks like a new regression in 81.0a1 build ID 20200804215246.
Crash volume is low. This crash affects non-Fission users.
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 2•4 years ago
|
||
Updated•4 years ago
|
Comment 4•4 years ago
|
||
bugherder |
Comment 5•4 years ago
|
||
Please nominate this for Beta approval when you get a chance.
Assignee | ||
Comment 6•4 years ago
|
||
Comment on attachment 9171486 [details]
Bug 1660001 - Don't assert when creating popup from shutting down process,
Beta/Release Uplift Approval Request
- User impact if declined: Parent process crashes when opening a pop-up from a shutting down process.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Adds an exception to diagnostic assertion logic. Has no impact other than to eliminate a crash.
- String changes made/needed: None
Comment 7•4 years ago
|
||
Comment on attachment 9171486 [details]
Bug 1660001 - Don't assert when creating popup from shutting down process,
Approved for 81.0b5.
Comment 8•4 years ago
|
||
bugherder uplift |
Description
•