Bug 1660001 - Don't assert when creating popup from shutting down process, r=kmag a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D87921